// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CeneteredLayout /> renders properly with default width 1`] = `
<WithStyles(ForwardRef(Grid))
  alignContent="center"
  container={true}
  justify="center"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={6}
  >
    Children
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`<CeneteredLayout /> renders properly with passed in width 1`] = `
<WithStyles(ForwardRef(Grid))
  alignContent="center"
  container={true}
  justify="center"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={2}
  >
    Children
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
